welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: type Booleran
  var oklm : Booleran =false
             ^Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
        return
        ^