welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var oklm : Booleran =false
  var i : Int = 0
  while (oklm==false){
    for (i<-1 to 6){
      avance()
      if (estSurBiscuit()==true){
        recule(i)
        oklm = true
        return
      }
      	else {
          recule(6)
          droite()
          avance()
          gauche()
        
      }
      
    }
    
    
    
  }
  haveBaggle()
}